clusters/home/apps/media/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`jellyfin.home.arpa`)
      services:
        - name: jellyfin
          port: 80
